add Manual frame selection function

--- a/draft.ipynb
+++ b/draft.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,195 +30,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "court-info-analysis\\B\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "10\n",
-      "11\n",
-      "12\n",
-      "13\n",
-      "14\n",
-      "15\n",
-      "16\n",
-      "17\n",
-      "18\n",
-      "19\n",
-      "20\n",
-      "21\n",
-      "22\n",
-      "23\n",
-      "24\n",
-      "25\n",
-      "26\n",
-      "27\n",
-      "28\n",
-      "29\n",
-      "30\n",
-      "31\n",
-      "32\n",
-      "33\n",
-      "34\n",
-      "35\n",
-      "36\n",
-      "37\n",
-      "38\n",
-      "39\n",
-      "40\n",
-      "41\n",
-      "42\n",
-      "43\n",
-      "44\n",
-      "45\n",
-      "46\n",
-      "47\n",
-      "48\n",
-      "49\n",
-      "50\n",
-      "51\n",
-      "52\n",
-      "53\n",
-      "54\n",
-      "55\n",
-      "56\n",
-      "57\n",
-      "58\n",
-      "59\n",
-      "60\n",
-      "61\n",
-      "62\n",
-      "63\n",
-      "64\n",
-      "65\n",
-      "66\n",
-      "67\n",
-      "68\n",
-      "69\n",
-      "70\n",
-      "71\n",
-      "72\n",
-      "73\n",
-      "74\n",
-      "75\n",
-      "76\n",
-      "77\n",
-      "78\n",
-      "79\n",
-      "80\n",
-      "81\n",
-      "82\n",
-      "83\n",
-      "84\n",
-      "85\n",
-      "86\n",
-      "87\n",
-      "88\n",
-      "89\n",
-      "90\n",
-      "91\n",
-      "92\n",
-      "93\n",
-      "94\n",
-      "95\n",
-      "96\n",
-      "97\n",
-      "98\n",
-      "99\n",
-      "100\n",
-      "101\n",
-      "102\n",
-      "103\n",
-      "104\n",
-      "105\n",
-      "106\n",
-      "107\n",
-      "108\n",
-      "109\n",
-      "110\n",
-      "111\n",
-      "112\n",
-      "113\n",
-      "114\n",
-      "115\n",
-      "116\n",
-      "117\n",
-      "118\n",
-      "119\n",
-      "120\n",
-      "121\n",
-      "122\n",
-      "123\n",
-      "124\n",
-      "125\n",
-      "126\n",
-      "127\n",
-      "128\n",
-      "129\n",
-      "130\n",
-      "131\n",
-      "132\n",
-      "133\n",
-      "134\n",
-      "135\n",
-      "136\n",
-      "137\n",
-      "138\n",
-      "139\n",
-      "140\n",
-      "141\n",
-      "142\n",
-      "143\n",
-      "144\n",
-      "145\n",
-      "146\n",
-      "147\n",
-      "148\n",
-      "149\n",
-      "150\n",
-      "151\n",
-      "152\n",
-      "153\n",
-      "154\n",
-      "155\n",
-      "156\n",
-      "157\n",
-      "158\n",
-      "159\n",
-      "160\n",
-      "161\n",
-      "162\n",
-      "163\n",
-      "164\n",
-      "165\n",
-      "166\n",
-      "167\n",
-      "168\n",
-      "169\n",
-      "170\n",
-      "171\n",
-      "172\n",
-      "173\n",
-      "174\n",
-      "175\n",
-      "176\n",
-      "177\n",
-      "178\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "import cv2 \n",
@@ -274,12 +88,301 @@
     "    if have_court:\n",
     "        frame=courtdetect.draw_court(frame)\n",
     "    if cnt>=limit:\n",
-    "        video_cilp.add_frame(True,frame,total_frames)\n",
+    "        video_cilp.add_frame(True,frame,total_frames-1)\n",
     "        break\n",
     "        \n",
     "    video_cilp.add_frame(True,frame,cnt)\n",
     "    cnt+=1\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "360\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "video_path=\"references/test2_test1_360.jpg\"\n",
+    "frame_name = os.path.basename(video_path).split('.')[0].split('_')[-1]\n",
+    "print(frame_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "import tkinter as tk\n",
+    "from PIL import Image, ImageTk\n",
+    "\n",
+    "# 打开视频文件\n",
+    "video = cv2.VideoCapture('videos/test1.mp4')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# 创建一个窗口\n",
+    "window = tk.Tk()\n",
+    "window.title(\"视频处理程序\")\n",
+    "window.geometry(\"800x600\")\n",
+    "\n",
+    "# 创建左侧图片标签\n",
+    "image_label1 = tk.Label(window)\n",
+    "image_label1.pack(side=\"left\")\n",
+    "\n",
+    "# 创建右侧图片标签\n",
+    "image_label2 = tk.Label(window)\n",
+    "image_label2.pack(side=\"right\")\n",
+    "\n",
+    "# 保存当前帧计数器\n",
+    "frame_counter = 0\n",
+    "\n",
+    "# 循环读取视频帧\n",
+    "while True:\n",
+    "    # 读取视频帧\n",
+    "    ret, frame = video.read()\n",
+    "\n",
+    "    if not ret:\n",
+    "        # 视频读取完毕\n",
+    "        break\n",
+    "\n",
+    "    # 将图像调整为指定大小\n",
+    "    frame_resized = cv2.resize(frame, (400, 300))\n",
+    "\n",
+    "    # 将OpenCV图像转换为PIL图像\n",
+    "    frame_pil = cv2.cvtColor(frame_resized, cv2.COLOR_BGR2RGB)\n",
+    "    frame_pil = Image.fromarray(frame_pil)\n",
+    "\n",
+    "    # 在左侧标签中显示未处理的图像\n",
+    "    frame_tk1 = ImageTk.PhotoImage(frame_pil)\n",
+    "    image_label1.configure(image=frame_tk1)\n",
+    "    image_label1.image = frame_tk1\n",
+    "\n",
+    "    # 对图像进行处理（例如，添加滤镜、调整亮度等）\n",
+    "    # 这里仅作示例，可以根据需要自定义处理过程\n",
+    "\n",
+    "    # 在右侧标签中显示处理过的图像\n",
+    "    frame_processed = frame_resized  # 假设处理过程为保持原样\n",
+    "    frame_processed_pil = cv2.cvtColor(frame_processed, cv2.COLOR_BGR2RGB)\n",
+    "    frame_processed_pil = Image.fromarray(frame_processed_pil)\n",
+    "    frame_tk2 = ImageTk.PhotoImage(frame_processed_pil)\n",
+    "    image_label2.configure(image=frame_tk2)\n",
+    "    image_label2.image = frame_tk2\n",
+    "\n",
+    "\n",
+    "    # 获取键盘输入\n",
+    "    key = cv2.waitKeyEx(0)\n",
+    "\n",
+    "    if key == 13:  # 按下回车键，保存当前帧的图像\n",
+    "        cv2.imwrite(f\"frame_{frame_counter}.jpg\", frame)\n",
+    "        print(f\"保存帧 {frame_counter}\")\n",
+    "    \n",
+    "    elif key == 27:  # 按下Esc键，退出循环\n",
+    "        break\n",
+    "    \n",
+    "    elif key == 82:  # 按上键，跳30帧往前\n",
+    "        frame_counter -= 30\n",
+    "        video.set(cv2.CAP_PROP_POS_FRAMES, frame_counter)\n",
+    "\n",
+    "    elif key == 83:  # 按下键，跳30帧往后\n",
+    "        frame_counter += 30\n",
+    "        video.set(cv2.CAP_PROP_POS_FRAMES, frame_counter)\n",
+    "    \n",
+    "    elif key == 81:  # 按左键，往前跳一帧\n",
+    "        frame_counter -= 1\n",
+    "        video.set(cv2.CAP_PROP_POS_FRAMES, frame_counter)\n",
+    "    \n",
+    "    elif key == 84:  # 按右键，往后跳一帧\n",
+    "        frame_counter += 1\n",
+    "        video.set(cv2.CAP_PROP_POS_FRAMES, frame_counter)\n",
+    "\n",
+    "    window.update()\n",
+    "\n",
+    "\n",
+    "    # 更新帧计数器\n",
+    "    frame_counter += 1\n",
+    "\n",
+    "# 关闭视频文件和窗口\n",
+    "video.release()\n",
+    "window.destroy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There is not court in the image! So you can't draw it.\n",
+      "There is not court in the image! So you can't draw it.\n",
+      "There is not court in the image! So you can't draw it.\n",
+      "There is not court in the image! So you can't draw it.\n",
+      "There is not court in the image! So you can't draw it.\n",
+      "There is not court in the image! So you can't draw it.\n",
+      "There is not court in the image! So you can't draw it.\n",
+      "There is not court in the image! So you can't draw it.\n",
+      "There is not court in the image! So you can't draw it.\n",
+      "There is not court in the image! So you can't draw it.\n",
+      "There is not court in the image! So you can't draw it.\n",
+      "There is not court in the image! So you can't draw it.\n",
+      "There is not court in the image! So you can't draw it.\n",
+      "There is not court in the image! So you can't draw it.\n",
+      "There is not court in the image! So you can't draw it.\n",
+      "There is not court in the image! So you can't draw it.\n",
+      "There is not court in the image! So you can't draw it.\n",
+      "There is not court in the image! So you can't draw it.\n",
+      "There is not court in the image! So you can't draw it.\n",
+      "There is not court in the image! So you can't draw it.\n",
+      "There is not court in the image! So you can't draw it.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in Tkinter callback\n",
+      "Traceback (most recent call last):\n",
+      "  File \"d:\\Users\\86153\\anaconda3\\envs\\joyrl\\lib\\tkinter\\__init__.py\", line 1892, in __call__\n",
+      "    return self.func(*args)\n",
+      "  File \"C:\\Users\\86153\\AppData\\Local\\Temp\\ipykernel_5432\\2946711024.py\", line 70, in key_press\n",
+      "    cv2.imwrite(f\"frame_{frame_counter}.jpg\", frame)\n",
+      "NameError: name 'frame' is not defined\n"
+     ]
+    }
+   ],
+   "source": [
+    "import cv2\n",
+    "import tkinter as tk\n",
+    "from PIL import Image, ImageTk\n",
+    "from CourtDetect import CourtDetect\n",
+    "\n",
+    "# 打开视频文件\n",
+    "video = cv2.VideoCapture('videos/test1.mp4')\n",
+    "court_detect=CourtDetect()\n",
+    "# 创建一个窗口\n",
+    "window = tk.Tk()\n",
+    "window.title(\"视频处理程序\")\n",
+    "window.geometry(\"800x600\")\n",
+    "\n",
+    "# 创建左侧图片标签\n",
+    "image_label1 = tk.Label(window)\n",
+    "image_label1.pack(side=\"left\")\n",
+    "\n",
+    "# 创建右侧图片标签\n",
+    "image_label2 = tk.Label(window)\n",
+    "image_label2.pack(side=\"right\")\n",
+    "\n",
+    "# 保存当前帧计数器\n",
+    "frame_counter = 0\n",
+    "total_frames=int(video.get(cv2.CAP_PROP_FRAME_COUNT))\n",
+    "frame=None\n",
+    "\n",
+    "# 图像显示回调函数\n",
+    "def update_image():\n",
+    "    # 读取视频帧\n",
+    "    global frame\n",
+    "    ret, frame = video.read()\n",
+    "\n",
+    "    if not ret:\n",
+    "       # 视频读取完毕\n",
+    "       return\n",
+    "\n",
+    "    # 将图像调整为指定大小\n",
+    "    frame_resized = cv2.resize(frame, (400, 300))\n",
+    "    # 将OpenCV图像转换为PIL图像\n",
+    "    frame_pil = cv2.cvtColor(frame_resized, cv2.COLOR_BGR2RGB)\n",
+    "    frame_pil = Image.fromarray(frame_pil)\n",
+    "\n",
+    "    # 在左侧标签中显示未处理的图像\n",
+    "    frame_tk1 = ImageTk.PhotoImage(frame_pil)\n",
+    "    image_label1.configure(image=frame_tk1)\n",
+    "    image_label1.image = frame_tk1\n",
+    "\n",
+    "    # 对图像进行处理（例如，添加滤镜、调整亮度等）\n",
+    "    # 这里仅作示例，可以根据需要自定义处理过程\n",
+    "\n",
+    "    # 在右侧标签中显示处理过的图像\n",
+    "    # frame_processed = frame_resized  # 假设处理过程为保持原样\n",
+    "    \n",
+    "    court_info,have_court=court_detect.get_court_info(frame_resized)\n",
+    "    frame_processed=court_detect.draw_court(frame_resized)\n",
+    "    frame_processed_pil = cv2.cvtColor(frame_processed, cv2.COLOR_BGR2RGB)\n",
+    "    frame_processed_pil = Image.fromarray(frame_processed_pil)\n",
+    "    frame_tk2 = ImageTk.PhotoImage(frame_processed_pil)\n",
+    "    image_label2.configure(image=frame_tk2)\n",
+    "    image_label2.image = frame_tk2\n",
+    "\n",
+    "    # 更新窗口显示\n",
+    "    window.update()\n",
+    "\n",
+    "# 键盘事件回调函数\n",
+    "def key_press(event):\n",
+    "    global frame_counter\n",
+    "    global total_frames\n",
+    "    global frame\n",
+    "    key = event.keysym\n",
+    "\n",
+    "    if key == \"Return\":  # 按下回车键，保存当前帧的图像\n",
+    "        cv2.imwrite(f\"frame_{frame_counter}.jpg\", frame)\n",
+    "        print(f\"保存帧 {frame_counter}\")\n",
+    "    \n",
+    "    if key == \"Escape\":  # 按下Esc键，退出程序\n",
+    "        window.destroy()\n",
+    "        return\n",
+    "    \n",
+    "    if key == \"Up\":  # 按上键，跳30帧往前\n",
+    "        frame_counter -= 30\n",
+    "        frame_counter=max(0,frame_counter)\n",
+    "        video.set(cv2.CAP_PROP_POS_FRAMES, frame_counter)\n",
+    "\n",
+    "    if key == \"Down\":  # 按下键，跳30帧往后\n",
+    "        frame_counter += 30\n",
+    "        frame_counter=min(frame_counter,total_frames)\n",
+    "        video.set(cv2.CAP_PROP_POS_FRAMES, frame_counter)\n",
+    "    \n",
+    "    if key == \"Left\":  # 按左键，往前跳一帧\n",
+    "        frame_counter -= 1\n",
+    "        frame_counter=max(0,frame_counter)\n",
+    "        video.set(cv2.CAP_PROP_POS_FRAMES, frame_counter)\n",
+    "    \n",
+    "    if key == \"Right\":  # 按右键，往后跳一帧\n",
+    "        frame_counter += 1\n",
+    "        frame_counter=min(frame_counter,total_frames)\n",
+    "        video.set(cv2.CAP_PROP_POS_FRAMES, frame_counter)\n",
+    "    \n",
+    "    # 更新图像\n",
+    "    update_image()\n",
+    "\n",
+    "# 绑定键盘事件处理函数\n",
+    "window.bind(\"<Key>\", key_press)\n",
+    "\n",
+    "# 初始化图像显示\n",
+    "update_image()\n",
+    "\n",
+    "# 进入主循环\n",
+    "window.mainloop()\n",
+    "\n",
+    "# 关闭视频文件\n",
+    "video.release()"
    ]
   }
  ],
