--- a/draft.ipynb
+++ b/draft.ipynb
@@ -98,133 +98,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "360\n"
-     ]
-    }
-   ],
-   "source": [
-    "import os\n",
-    "video_path=\"references/test2_test1_360.jpg\"\n",
-    "frame_name = os.path.basename(video_path).split('.')[0].split('_')[-1]\n",
-    "print(frame_name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import cv2\n",
-    "import tkinter as tk\n",
-    "from PIL import Image, ImageTk\n",
-    "\n",
-    "# 打开视频文件\n",
-    "video = cv2.VideoCapture('videos/test1.mp4')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# 创建一个窗口\n",
-    "window = tk.Tk()\n",
-    "window.title(\"视频处理程序\")\n",
-    "window.geometry(\"800x600\")\n",
-    "\n",
-    "# 创建左侧图片标签\n",
-    "image_label1 = tk.Label(window)\n",
-    "image_label1.pack(side=\"left\")\n",
-    "\n",
-    "# 创建右侧图片标签\n",
-    "image_label2 = tk.Label(window)\n",
-    "image_label2.pack(side=\"right\")\n",
-    "\n",
-    "# 保存当前帧计数器\n",
-    "frame_counter = 0\n",
-    "\n",
-    "# 循环读取视频帧\n",
-    "while True:\n",
-    "    # 读取视频帧\n",
-    "    ret, frame = video.read()\n",
-    "\n",
-    "    if not ret:\n",
-    "        # 视频读取完毕\n",
-    "        break\n",
-    "\n",
-    "    # 将图像调整为指定大小\n",
-    "    frame_resized = cv2.resize(frame, (400, 300))\n",
-    "\n",
-    "    # 将OpenCV图像转换为PIL图像\n",
-    "    frame_pil = cv2.cvtColor(frame_resized, cv2.COLOR_BGR2RGB)\n",
-    "    frame_pil = Image.fromarray(frame_pil)\n",
-    "\n",
-    "    # 在左侧标签中显示未处理的图像\n",
-    "    frame_tk1 = ImageTk.PhotoImage(frame_pil)\n",
-    "    image_label1.configure(image=frame_tk1)\n",
-    "    image_label1.image = frame_tk1\n",
-    "\n",
-    "    # 对图像进行处理（例如，添加滤镜、调整亮度等）\n",
-    "    # 这里仅作示例，可以根据需要自定义处理过程\n",
-    "\n",
-    "    # 在右侧标签中显示处理过的图像\n",
-    "    frame_processed = frame_resized  # 假设处理过程为保持原样\n",
-    "    frame_processed_pil = cv2.cvtColor(frame_processed, cv2.COLOR_BGR2RGB)\n",
-    "    frame_processed_pil = Image.fromarray(frame_processed_pil)\n",
-    "    frame_tk2 = ImageTk.PhotoImage(frame_processed_pil)\n",
-    "    image_label2.configure(image=frame_tk2)\n",
-    "    image_label2.image = frame_tk2\n",
-    "\n",
-    "\n",
-    "    # 获取键盘输入\n",
-    "    key = cv2.waitKeyEx(0)\n",
-    "\n",
-    "    if key == 13:  # 按下回车键，保存当前帧的图像\n",
-    "        cv2.imwrite(f\"frame_{frame_counter}.jpg\", frame)\n",
-    "        print(f\"保存帧 {frame_counter}\")\n",
-    "    \n",
-    "    elif key == 27:  # 按下Esc键，退出循环\n",
-    "        break\n",
-    "    \n",
-    "    elif key == 82:  # 按上键，跳30帧往前\n",
-    "        frame_counter -= 30\n",
-    "        video.set(cv2.CAP_PROP_POS_FRAMES, frame_counter)\n",
-    "\n",
-    "    elif key == 83:  # 按下键，跳30帧往后\n",
-    "        frame_counter += 30\n",
-    "        video.set(cv2.CAP_PROP_POS_FRAMES, frame_counter)\n",
-    "    \n",
-    "    elif key == 81:  # 按左键，往前跳一帧\n",
-    "        frame_counter -= 1\n",
-    "        video.set(cv2.CAP_PROP_POS_FRAMES, frame_counter)\n",
-    "    \n",
-    "    elif key == 84:  # 按右键，往后跳一帧\n",
-    "        frame_counter += 1\n",
-    "        video.set(cv2.CAP_PROP_POS_FRAMES, frame_counter)\n",
-    "\n",
-    "    window.update()\n",
-    "\n",
-    "\n",
-    "    # 更新帧计数器\n",
-    "    frame_counter += 1\n",
-    "\n",
-    "# 关闭视频文件和窗口\n",
-    "video.release()\n",
-    "window.destroy()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
@@ -232,157 +105,169 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There is not court in the image! So you can't draw it.\n",
-      "There is not court in the image! So you can't draw it.\n",
-      "There is not court in the image! So you can't draw it.\n",
-      "There is not court in the image! So you can't draw it.\n",
-      "There is not court in the image! So you can't draw it.\n",
-      "There is not court in the image! So you can't draw it.\n",
-      "There is not court in the image! So you can't draw it.\n",
-      "There is not court in the image! So you can't draw it.\n",
-      "There is not court in the image! So you can't draw it.\n",
-      "There is not court in the image! So you can't draw it.\n",
-      "There is not court in the image! So you can't draw it.\n",
-      "There is not court in the image! So you can't draw it.\n",
-      "There is not court in the image! So you can't draw it.\n",
-      "There is not court in the image! So you can't draw it.\n",
-      "There is not court in the image! So you can't draw it.\n",
-      "There is not court in the image! So you can't draw it.\n",
-      "There is not court in the image! So you can't draw it.\n",
-      "There is not court in the image! So you can't draw it.\n",
-      "There is not court in the image! So you can't draw it.\n",
-      "There is not court in the image! So you can't draw it.\n",
-      "There is not court in the image! So you can't draw it.\n"
+      "25.0\n",
+      "0\n",
+      "11262\n",
+      "11270\n",
+      "11322\n",
+      "11351\n"
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Exception in Tkinter callback\n",
-      "Traceback (most recent call last):\n",
-      "  File \"d:\\Users\\86153\\anaconda3\\envs\\joyrl\\lib\\tkinter\\__init__.py\", line 1892, in __call__\n",
-      "    return self.func(*args)\n",
-      "  File \"C:\\Users\\86153\\AppData\\Local\\Temp\\ipykernel_5432\\2946711024.py\", line 70, in key_press\n",
-      "    cv2.imwrite(f\"frame_{frame_counter}.jpg\", frame)\n",
-      "NameError: name 'frame' is not defined\n"
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: ''",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\86153\\Desktop\\SoloShuttlePose\\draft.ipynb 单元格 5\u001b[0m line \u001b[0;36m4\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/86153/Desktop/SoloShuttlePose/draft.ipynb#X11sZmlsZQ%3D%3D?line=42'>43</a>\u001b[0m cv2\u001b[39m.\u001b[39mwaitKey(\u001b[39m0\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/86153/Desktop/SoloShuttlePose/draft.ipynb#X11sZmlsZQ%3D%3D?line=43'>44</a>\u001b[0m cv2\u001b[39m.\u001b[39mdestroyAllWindows()\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/86153/Desktop/SoloShuttlePose/draft.ipynb#X11sZmlsZQ%3D%3D?line=44'>45</a>\u001b[0m nframe\u001b[39m=\u001b[39m\u001b[39mint\u001b[39;49m(\u001b[39minput\u001b[39;49m())\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/86153/Desktop/SoloShuttlePose/draft.ipynb#X11sZmlsZQ%3D%3D?line=45'>46</a>\u001b[0m video\u001b[39m.\u001b[39mset(cv2\u001b[39m.\u001b[39mCAP_PROP_POS_FRAMES, nframe)\n",
+      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: ''"
      ]
     }
    ],
    "source": [
-    "import cv2\n",
-    "import tkinter as tk\n",
-    "from PIL import Image, ImageTk\n",
+    "\n",
+    "import cv2 \n",
     "from CourtDetect import CourtDetect\n",
+    "from VideoClip import VideoClip\n",
+    "import os\n",
+    "import tqdm\n",
     "\n",
-    "# 打开视频文件\n",
-    "video = cv2.VideoCapture('videos/test1.mp4')\n",
-    "court_detect=CourtDetect()\n",
-    "# 创建一个窗口\n",
-    "window = tk.Tk()\n",
-    "window.title(\"视频处理程序\")\n",
-    "window.geometry(\"800x600\")\n",
+    "video_path=\"videos/D.mp4\"\n",
     "\n",
-    "# 创建左侧图片标签\n",
-    "image_label1 = tk.Label(window)\n",
-    "image_label1.pack(side=\"left\")\n",
+    "video_name = os.path.basename(video_path).split('.')[0]\n",
     "\n",
-    "# 创建右侧图片标签\n",
-    "image_label2 = tk.Label(window)\n",
-    "image_label2.pack(side=\"right\")\n",
+    "# Open the video file\n",
+    "video = cv2.VideoCapture(video_path)\n",
     "\n",
-    "# 保存当前帧计数器\n",
-    "frame_counter = 0\n",
-    "total_frames=int(video.get(cv2.CAP_PROP_FRAME_COUNT))\n",
-    "frame=None\n",
+    "# 设置输出视频的名称、编解码器、帧率和视频分辨率\n",
+    "video_name = f\"{video_name}\"\n",
+    "full_path = os.path.join(\"court-info-analysis\", video_name)\n",
     "\n",
-    "# 图像显示回调函数\n",
-    "def update_image():\n",
-    "    # 读取视频帧\n",
-    "    global frame\n",
+    "\n",
+    "frame_width = int(video.get(cv2.CAP_PROP_FRAME_WIDTH))\n",
+    "frame_height = int(video.get(cv2.CAP_PROP_FRAME_HEIGHT))\n",
+    "\n",
+    "\n",
+    "# Get video properties\n",
+    "fps = video.get(cv2.CAP_PROP_FPS)\n",
+    "\n",
+    "# Number of consecutively detected pitch frames\n",
+    "last_count = 0\n",
+    "total_frames = int(video.get(cv2.CAP_PROP_FRAME_COUNT))\n",
+    "court_info_list = []\n",
+    "# the number of skip frams per time\n",
+    "skip_frames = int(fps)\n",
+    "\n",
+    "print(fps)\n",
+    "\n",
+    "\n",
+    "while True:\n",
+    "    current_frame = int(video.get(cv2.CAP_PROP_POS_FRAMES))\n",
     "    ret, frame = video.read()\n",
-    "\n",
+    "    print(current_frame)\n",
     "    if not ret:\n",
-    "       # 视频读取完毕\n",
-    "       return\n",
+    "        break\n",
+    "    cv2.imshow(f\"{current_frame}\",frame)\n",
+    "    cv2.waitKey(0)\n",
+    "    cv2.destroyAllWindows()\n",
+    "    nframe=int(input())\n",
+    "    video.set(cv2.CAP_PROP_POS_FRAMES, nframe)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# test the reference picture name get"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1042\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "video_path=\"references/test1_1042.jpg\"\n",
+    "frame_name = os.path.basename(video_path).split('.')[0].split('_')[-1]\n",
+    "print(frame_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[461, 468], [1442, 445], [462, 464], [1458, 465]]\n",
+      "[[952 466]\n",
+      " [952 454]\n",
+      " [960 454]\n",
+      " [960 466]]\n",
+      "[[461, 468], [1442, 445], [462, 464], [1458, 465]]\n",
+      "[[952 466]\n",
+      " [952 454]\n",
+      " [960 454]\n",
+      " [960 466]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from NetDetect import NetDetect\n",
+    "import cv2\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
-    "    # 将图像调整为指定大小\n",
-    "    frame_resized = cv2.resize(frame, (400, 300))\n",
-    "    # 将OpenCV图像转换为PIL图像\n",
-    "    frame_pil = cv2.cvtColor(frame_resized, cv2.COLOR_BGR2RGB)\n",
-    "    frame_pil = Image.fromarray(frame_pil)\n",
+    "reference_path = \"references/test1_1042.jpg\"\n",
     "\n",
-    "    # 在左侧标签中显示未处理的图像\n",
-    "    frame_tk1 = ImageTk.PhotoImage(frame_pil)\n",
-    "    image_label1.configure(image=frame_tk1)\n",
-    "    image_label1.image = frame_tk1\n",
+    "net_detect = NetDetect()\n",
+    "frame = cv2.imread(reference_path)\n",
     "\n",
-    "    # 对图像进行处理（例如，添加滤镜、调整亮度等）\n",
-    "    # 这里仅作示例，可以根据需要自定义处理过程\n",
+    "# 获取网络信息和检测结果\n",
+    "net_info, have_net = net_detect.get_net_info(frame)\n",
     "\n",
-    "    # 在右侧标签中显示处理过的图像\n",
-    "    # frame_processed = frame_resized  # 假设处理过程为保持原样\n",
-    "    \n",
-    "    court_info,have_court=court_detect.get_court_info(frame_resized)\n",
-    "    frame_processed=court_detect.draw_court(frame_resized)\n",
-    "    frame_processed_pil = cv2.cvtColor(frame_processed, cv2.COLOR_BGR2RGB)\n",
-    "    frame_processed_pil = Image.fromarray(frame_processed_pil)\n",
-    "    frame_tk2 = ImageTk.PhotoImage(frame_processed_pil)\n",
-    "    image_label2.configure(image=frame_tk2)\n",
-    "    image_label2.image = frame_tk2\n",
+    "# 绘制转换后的图片\n",
+    "img = net_detect.draw_net(frame)\n",
     "\n",
-    "    # 更新窗口显示\n",
-    "    window.update()\n",
+    "reference_path = \"references/test1_10421.jpg\"\n",
     "\n",
-    "# 键盘事件回调函数\n",
-    "def key_press(event):\n",
-    "    global frame_counter\n",
-    "    global total_frames\n",
-    "    global frame\n",
-    "    key = event.keysym\n",
+    "net_detect = NetDetect()\n",
+    "frame = cv2.imread(reference_path)\n",
     "\n",
-    "    if key == \"Return\":  # 按下回车键，保存当前帧的图像\n",
-    "        cv2.imwrite(f\"frame_{frame_counter}.jpg\", frame)\n",
-    "        print(f\"保存帧 {frame_counter}\")\n",
-    "    \n",
-    "    if key == \"Escape\":  # 按下Esc键，退出程序\n",
-    "        window.destroy()\n",
-    "        return\n",
-    "    \n",
-    "    if key == \"Up\":  # 按上键，跳30帧往前\n",
-    "        frame_counter -= 30\n",
-    "        frame_counter=max(0,frame_counter)\n",
-    "        video.set(cv2.CAP_PROP_POS_FRAMES, frame_counter)\n",
+    "# 获取网络信息和检测结果\n",
+    "net_info, have_net = net_detect.get_net_info(frame)\n",
     "\n",
-    "    if key == \"Down\":  # 按下键，跳30帧往后\n",
-    "        frame_counter += 30\n",
-    "        frame_counter=min(frame_counter,total_frames)\n",
-    "        video.set(cv2.CAP_PROP_POS_FRAMES, frame_counter)\n",
-    "    \n",
-    "    if key == \"Left\":  # 按左键，往前跳一帧\n",
-    "        frame_counter -= 1\n",
-    "        frame_counter=max(0,frame_counter)\n",
-    "        video.set(cv2.CAP_PROP_POS_FRAMES, frame_counter)\n",
-    "    \n",
-    "    if key == \"Right\":  # 按右键，往后跳一帧\n",
-    "        frame_counter += 1\n",
-    "        frame_counter=min(frame_counter,total_frames)\n",
-    "        video.set(cv2.CAP_PROP_POS_FRAMES, frame_counter)\n",
-    "    \n",
-    "    # 更新图像\n",
-    "    update_image()\n",
-    "\n",
-    "# 绑定键盘事件处理函数\n",
-    "window.bind(\"<Key>\", key_press)\n",
-    "\n",
-    "# 初始化图像显示\n",
-    "update_image()\n",
-    "\n",
-    "# 进入主循环\n",
-    "window.mainloop()\n",
-    "\n",
-    "# 关闭视频文件\n",
-    "video.release()"
+    "# 绘制转换后的图片\n",
+    "img = net_detect.draw_net(frame)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "print(torch.cuda.is_available())\n"
    ]
   }
  ],
@@ -402,7 +287,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
