--- a/draft.ipynb
+++ b/draft.ipynb
@@ -50,6 +50,25 @@
     "                ball_detect(res_video_path, f\"{result_path}/ball\")\n",
     "    print(\"-\" * 10 + \"End Badminton Detection\" + \"-\" * 10)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.0.1+cu117\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "\n",
+    "print(torch.__version__)"
+   ]
   }
  ],
  "metadata": {
