--- a/draft.ipynb
+++ b/draft.ipynb
@@ -69,6 +69,697 @@
     "\n",
     "print(torch.__version__)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "E:\\res\n",
+      "----------Starting Ball Detection----------\n",
+      "E:\\res/players/player_kp\\Akane_YAMAGUCHI_AN_Se_Young_BWF_World_Championships_2022_Semi_finals.json\n",
+      "18195\n",
+      "18196\n",
+      "18197\n",
+      "18198\n",
+      "18199\n",
+      "18200\n",
+      "18201\n",
+      "18202\n",
+      "18203\n",
+      "18204\n",
+      "18205\n",
+      "18206\n",
+      "18207\n",
+      "18208\n",
+      "18209\n",
+      "18210\n",
+      "18211\n",
+      "18212\n",
+      "18213\n",
+      "18214\n",
+      "18215\n",
+      "18216\n",
+      "18217\n",
+      "18218\n",
+      "18219\n",
+      "18220\n",
+      "18221\n",
+      "18222\n",
+      "18223\n",
+      "18224\n",
+      "18225\n",
+      "18226\n",
+      "18227\n",
+      "18228\n",
+      "18229\n",
+      "18230\n",
+      "18231\n",
+      "18232\n",
+      "18233\n",
+      "18234\n",
+      "18235\n",
+      "18236\n",
+      "18237\n",
+      "18238\n",
+      "18239\n",
+      "18240\n",
+      "18241\n",
+      "18242\n",
+      "18243\n",
+      "18244\n",
+      "18245\n",
+      "18246\n",
+      "18247\n",
+      "18248\n",
+      "18249\n",
+      "18250\n",
+      "18251\n",
+      "18252\n",
+      "18253\n",
+      "18254\n",
+      "18255\n",
+      "18256\n",
+      "18257\n",
+      "18258\n",
+      "18259\n",
+      "18260\n",
+      "18261\n",
+      "18262\n",
+      "18263\n",
+      "18264\n",
+      "18265\n",
+      "18266\n",
+      "18267\n",
+      "18268\n",
+      "18269\n",
+      "18270\n",
+      "18271\n",
+      "18272\n",
+      "18273\n",
+      "18274\n",
+      "18275\n",
+      "18276\n",
+      "18277\n",
+      "18278\n",
+      "18279\n",
+      "18280\n",
+      "18281\n",
+      "18282\n",
+      "18283\n",
+      "18284\n",
+      "18285\n",
+      "18286\n",
+      "18287\n",
+      "18288\n",
+      "18289\n",
+      "18290\n",
+      "18291\n",
+      "18292\n",
+      "18293\n",
+      "18294\n",
+      "18295\n",
+      "18297\n",
+      "18298\n",
+      "18401\n",
+      "18402\n",
+      "18403\n",
+      "18404\n",
+      "18405\n",
+      "18406\n",
+      "18407\n",
+      "18408\n",
+      "18409\n",
+      "18410\n",
+      "18411\n",
+      "18412\n",
+      "18413\n",
+      "18414\n",
+      "18415\n",
+      "18416\n",
+      "18417\n",
+      "18418\n",
+      "18419\n",
+      "18420\n",
+      "18421\n",
+      "18422\n",
+      "18423\n",
+      "18424\n",
+      "18425\n",
+      "18426\n",
+      "18427\n",
+      "18428\n",
+      "18429\n",
+      "18430\n",
+      "18431\n",
+      "18432\n",
+      "18433\n",
+      "18434\n",
+      "18435\n",
+      "18436\n",
+      "18437\n",
+      "18438\n",
+      "18439\n",
+      "18440\n",
+      "18441\n",
+      "18442\n",
+      "18443\n",
+      "18444\n",
+      "18445\n",
+      "18446\n",
+      "18447\n",
+      "18448\n",
+      "18449\n",
+      "18450\n",
+      "18451\n",
+      "18452\n",
+      "18453\n",
+      "18454\n",
+      "18455\n",
+      "18456\n",
+      "18457\n",
+      "18458\n",
+      "18459\n",
+      "18460\n",
+      "18461\n",
+      "18462\n",
+      "18463\n",
+      "18464\n",
+      "18465\n",
+      "18466\n",
+      "18467\n",
+      "18468\n",
+      "18469\n",
+      "18470\n",
+      "18471\n",
+      "18472\n",
+      "18473\n",
+      "18474\n",
+      "18475\n",
+      "18476\n",
+      "18477\n",
+      "18478\n",
+      "18479\n",
+      "18480\n",
+      "18481\n",
+      "18482\n",
+      "18483\n",
+      "18484\n",
+      "18485\n",
+      "18486\n",
+      "18487\n",
+      "18488\n",
+      "18489\n",
+      "18490\n",
+      "18491\n",
+      "18492\n",
+      "18493\n",
+      "18494\n",
+      "18495\n",
+      "18496\n",
+      "18497\n",
+      "18498\n",
+      "18499\n",
+      "18500\n",
+      "18501\n",
+      "18502\n",
+      "18503\n",
+      "18504\n",
+      "18505\n",
+      "18506\n",
+      "18507\n",
+      "18508\n",
+      "18509\n",
+      "18510\n",
+      "18511\n",
+      "18512\n",
+      "18513\n",
+      "18514\n",
+      "18515\n",
+      "18516\n",
+      "18517\n",
+      "18518\n",
+      "18519\n",
+      "18520\n",
+      "18521\n",
+      "18522\n",
+      "18523\n",
+      "18524\n",
+      "18525\n",
+      "18526\n",
+      "18527\n",
+      "18528\n",
+      "18529\n",
+      "18530\n",
+      "18531\n",
+      "18532\n",
+      "18533\n",
+      "18534\n",
+      "18535\n",
+      "18536\n",
+      "18537\n",
+      "18538\n",
+      "18539\n",
+      "18540\n",
+      "18541\n",
+      "18542\n",
+      "18543\n",
+      "18544\n",
+      "18545\n",
+      "18546\n",
+      "18547\n",
+      "18548\n",
+      "18549\n",
+      "18550\n",
+      "18551\n",
+      "18552\n",
+      "18553\n",
+      "18554\n",
+      "18555\n",
+      "18556\n",
+      "18557\n",
+      "18558\n",
+      "18559\n",
+      "18560\n",
+      "18561\n",
+      "18562\n",
+      "18563\n",
+      "18564\n",
+      "18565\n",
+      "18566\n",
+      "18567\n",
+      "18568\n",
+      "18569\n",
+      "18570\n",
+      "18571\n",
+      "18572\n",
+      "18573\n",
+      "18574\n",
+      "18575\n",
+      "18576\n",
+      "18577\n",
+      "18578\n",
+      "18579\n",
+      "18580\n",
+      "18581\n",
+      "18582\n",
+      "18583\n",
+      "18584\n",
+      "18585\n",
+      "18586\n",
+      "18587\n",
+      "18588\n",
+      "18589\n",
+      "18590\n",
+      "18591\n",
+      "18592\n",
+      "18593\n",
+      "18594\n",
+      "18595\n",
+      "18596\n",
+      "18597\n",
+      "18598\n",
+      "18599\n",
+      "18600\n",
+      "18601\n",
+      "18602\n",
+      "18603\n",
+      "18604\n",
+      "18605\n",
+      "18606\n",
+      "18607\n",
+      "18608\n",
+      "18609\n",
+      "18610\n",
+      "18611\n",
+      "18612\n",
+      "18613\n",
+      "18614\n",
+      "18615\n",
+      "18616\n",
+      "18617\n",
+      "18618\n",
+      "18619\n",
+      "18620\n",
+      "18621\n",
+      "18622\n",
+      "18623\n",
+      "18624\n",
+      "18625\n",
+      "18626\n",
+      "18627\n",
+      "18628\n",
+      "18629\n",
+      "18630\n",
+      "18631\n",
+      "18632\n",
+      "18633\n",
+      "18634\n",
+      "18635\n",
+      "18636\n",
+      "18637\n",
+      "18638\n",
+      "18639\n",
+      "18640\n",
+      "18641\n",
+      "18642\n",
+      "18643\n",
+      "18644\n",
+      "18645\n",
+      "18646\n",
+      "18647\n",
+      "18648\n",
+      "18649\n",
+      "18650\n",
+      "18651\n",
+      "18652\n",
+      "18653\n",
+      "18654\n",
+      "18655\n",
+      "18656\n",
+      "18657\n",
+      "18658\n",
+      "18659\n",
+      "18660\n",
+      "18661\n",
+      "18662\n",
+      "18663\n",
+      "18664\n",
+      "18665\n",
+      "18666\n",
+      "18667\n",
+      "18668\n",
+      "18669\n",
+      "18670\n",
+      "18671\n",
+      "18672\n",
+      "18673\n",
+      "18674\n",
+      "18675\n",
+      "18676\n",
+      "18677\n",
+      "18678\n",
+      "18679\n",
+      "18680\n",
+      "18681\n",
+      "18682\n",
+      "18683\n",
+      "18684\n",
+      "18685\n",
+      "18686\n",
+      "18687\n",
+      "18688\n",
+      "18689\n",
+      "18690\n",
+      "18691\n",
+      "18692\n",
+      "18693\n",
+      "18694\n",
+      "18695\n",
+      "18696\n",
+      "18697\n",
+      "18698\n",
+      "18699\n",
+      "18700\n",
+      "18701\n",
+      "18702\n",
+      "18703\n",
+      "18704\n",
+      "18705\n",
+      "18706\n",
+      "18707\n",
+      "18708\n",
+      "18709\n",
+      "18710\n",
+      "18711\n",
+      "18712\n",
+      "18713\n",
+      "18714\n",
+      "18715\n",
+      "18716\n",
+      "18717\n",
+      "18718\n",
+      "18719\n",
+      "18720\n",
+      "18721\n",
+      "18722\n",
+      "18723\n",
+      "18724\n",
+      "18725\n",
+      "18726\n",
+      "18727\n",
+      "18728\n",
+      "18729\n",
+      "18730\n",
+      "18731\n",
+      "18732\n",
+      "18733\n",
+      "18734\n",
+      "18735\n",
+      "18736\n",
+      "18737\n",
+      "18738\n",
+      "18739\n",
+      "18740\n",
+      "18741\n",
+      "18742\n",
+      "18743\n",
+      "18744\n",
+      "18745\n",
+      "18746\n",
+      "18747\n",
+      "18748\n",
+      "18749\n",
+      "18750\n",
+      "18751\n",
+      "18752\n",
+      "18753\n",
+      "18754\n",
+      "18755\n",
+      "18756\n",
+      "18757\n",
+      "18758\n",
+      "18759\n",
+      "18760\n",
+      "18761\n",
+      "18762\n",
+      "18763\n",
+      "18764\n",
+      "18765\n",
+      "18766\n",
+      "18767\n",
+      "18768\n",
+      "18769\n",
+      "18770\n",
+      "18771\n",
+      "18772\n",
+      "18773\n",
+      "18774\n",
+      "18775\n",
+      "18776\n",
+      "18777\n",
+      "18778\n",
+      "18779\n",
+      "18780\n",
+      "18781\n",
+      "18782\n",
+      "18783\n",
+      "18784\n",
+      "18785\n",
+      "18786\n",
+      "18787\n",
+      "18788\n",
+      "18789\n",
+      "18790\n",
+      "18791\n",
+      "18792\n",
+      "18793\n",
+      "18794\n",
+      "18795\n",
+      "18796\n",
+      "18797\n",
+      "18798\n",
+      "18799\n",
+      "18800\n",
+      "18801\n",
+      "18802\n",
+      "18803\n",
+      "18804\n",
+      "18805\n",
+      "18806\n",
+      "18807\n",
+      "18808\n",
+      "18809\n",
+      "18810\n",
+      "18811\n",
+      "18812\n",
+      "18813\n",
+      "18814\n",
+      "18815\n",
+      "18816\n",
+      "18817\n",
+      "18818\n",
+      "18819\n",
+      "18820\n",
+      "18821\n",
+      "18822\n",
+      "18823\n",
+      "18824\n",
+      "18825\n",
+      "18826\n",
+      "18827\n",
+      "18828\n",
+      "18829\n",
+      "18830\n",
+      "18831\n",
+      "18832\n",
+      "18833\n",
+      "18834\n",
+      "18835\n",
+      "18836\n",
+      "18837\n",
+      "18838\n",
+      "18839\n",
+      "18840\n",
+      "18841\n",
+      "18842\n",
+      "18843\n",
+      "18844\n",
+      "18845\n",
+      "18846\n",
+      "18847\n",
+      "18848\n",
+      "18849\n",
+      "18850\n",
+      "18851\n",
+      "18852\n",
+      "18853\n",
+      "18854\n",
+      "18855\n",
+      "18856\n",
+      "18857\n",
+      "18858\n",
+      "18859\n",
+      "18860\n",
+      "18861\n",
+      "18862\n",
+      "18863\n",
+      "18864\n",
+      "18865\n",
+      "18866\n",
+      "18867\n",
+      "18868\n",
+      "18869\n",
+      "18870\n",
+      "18871\n",
+      "18872\n",
+      "18873\n",
+      "18874\n",
+      "18875\n",
+      "18876\n",
+      "18877\n",
+      "18878\n",
+      "18879\n",
+      "18880\n",
+      "18881\n",
+      "18882\n",
+      "18883\n",
+      "18884\n",
+      "18885\n",
+      "18886\n",
+      "18887\n",
+      "18888\n",
+      "18889\n",
+      "18890\n",
+      "18891\n",
+      "18892\n",
+      "18893\n",
+      "18894\n",
+      "18895\n",
+      "18896\n",
+      "18897\n",
+      "18898\n",
+      "18899\n",
+      "18900\n",
+      "18901\n",
+      "18902\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32me:\\paper reading-v1\\SoloShuttlePose\\draft.ipynb 单元格 3\u001b[0m line \u001b[0;36m5\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/paper%20reading-v1/SoloShuttlePose/draft.ipynb#W2sZmlsZQ%3D%3D?line=45'>46</a>\u001b[0m     player_dict[key]\u001b[39m=\u001b[39m{\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/paper%20reading-v1/SoloShuttlePose/draft.ipynb#W2sZmlsZQ%3D%3D?line=46'>47</a>\u001b[0m         \u001b[39m'\u001b[39m\u001b[39mtop\u001b[39m\u001b[39m'\u001b[39m:value[\u001b[39m'\u001b[39m\u001b[39mbottom\u001b[39m\u001b[39m'\u001b[39m],\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/paper%20reading-v1/SoloShuttlePose/draft.ipynb#W2sZmlsZQ%3D%3D?line=47'>48</a>\u001b[0m         \u001b[39m'\u001b[39m\u001b[39mbottom\u001b[39m\u001b[39m'\u001b[39m:value[\u001b[39m'\u001b[39m\u001b[39mtop\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/paper%20reading-v1/SoloShuttlePose/draft.ipynb#W2sZmlsZQ%3D%3D?line=48'>49</a>\u001b[0m     }\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/paper%20reading-v1/SoloShuttlePose/draft.ipynb#W2sZmlsZQ%3D%3D?line=49'>50</a>\u001b[0m     \u001b[39mprint\u001b[39m(key)\n\u001b[1;32m---> <a href='vscode-notebook-cell:/e%3A/paper%20reading-v1/SoloShuttlePose/draft.ipynb#W2sZmlsZQ%3D%3D?line=51'>52</a>\u001b[0m     write_json(player_dict, video_name,\u001b[39mf\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mans/players/player_kp\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/paper%20reading-v1/SoloShuttlePose/draft.ipynb#W2sZmlsZQ%3D%3D?line=53'>54</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39m-\u001b[39m\u001b[39m\"\u001b[39m \u001b[39m*\u001b[39m \u001b[39m10\u001b[39m \u001b[39m+\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mEnd Badminton Detection\u001b[39m\u001b[39m\"\u001b[39m \u001b[39m+\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m-\u001b[39m\u001b[39m\"\u001b[39m \u001b[39m*\u001b[39m \u001b[39m10\u001b[39m)\n",
+      "File \u001b[1;32me:\\paper reading-v1\\SoloShuttlePose\\src\\tools\\utils.py:47\u001b[0m, in \u001b[0;36mwrite_json\u001b[1;34m(data, file_name, save_path, mode)\u001b[0m\n\u001b[0;32m     45\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(full_path, \u001b[39m'\u001b[39m\u001b[39mr+\u001b[39m\u001b[39m'\u001b[39m) \u001b[39mas\u001b[39;00m file:\n\u001b[0;32m     46\u001b[0m     \u001b[39mfor\u001b[39;00m key, value \u001b[39min\u001b[39;00m data\u001b[39m.\u001b[39mitems():\n\u001b[1;32m---> 47\u001b[0m         \u001b[39mif\u001b[39;00m is_file_empty(full_path):\n\u001b[0;32m     48\u001b[0m             file\u001b[39m.\u001b[39mwrite(\u001b[39m'\u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m'\u001b[39m)\n\u001b[0;32m     49\u001b[0m             file\u001b[39m.\u001b[39mseek(\u001b[39m0\u001b[39m, os\u001b[39m.\u001b[39mSEEK_END)\n",
+      "File \u001b[1;32me:\\paper reading-v1\\SoloShuttlePose\\src\\tools\\utils.py:23\u001b[0m, in \u001b[0;36mis_file_empty\u001b[1;34m(file_path)\u001b[0m\n\u001b[0;32m     22\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mis_file_empty\u001b[39m(file_path):\n\u001b[1;32m---> 23\u001b[0m     \u001b[39mreturn\u001b[39;00m os\u001b[39m.\u001b[39;49mpath\u001b[39m.\u001b[39;49mgetsize(file_path) \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m\n",
+      "File \u001b[1;32md:\\Users\\86153\\anaconda3\\envs\\tracknetv3\\lib\\genericpath.py:50\u001b[0m, in \u001b[0;36mgetsize\u001b[1;34m(filename)\u001b[0m\n\u001b[0;32m     48\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mgetsize\u001b[39m(filename):\n\u001b[0;32m     49\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"Return the size of a file, reported by os.stat().\"\"\"\u001b[39;00m\n\u001b[1;32m---> 50\u001b[0m     \u001b[39mreturn\u001b[39;00m os\u001b[39m.\u001b[39;49mstat(filename)\u001b[39m.\u001b[39mst_size\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "import cv2\n",
+    "import copy\n",
+    "from tqdm import tqdm\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from torchvision.transforms import transforms\n",
+    "from torchvision.transforms import functional as F\n",
+    "import os\n",
+    "from src.tools.utils import write_json, read_json,clear_file, is_video_detect, find_next, find_reference\n",
+    "from src.tools.VideoClip import VideoClip\n",
+    "from src.models.PoseDetect import PoseDetect\n",
+    "from src.models.CourtDetect import CourtDetect\n",
+    "from src.models.NetDetect import NetDetect\n",
+    "import argparse\n",
+    "from src.tools.BallDetect import ball_detect\n",
+    "import warnings\n",
+    "# clear the polyfit Rankwarning\n",
+    "warnings.simplefilter('ignore', np.RankWarning)\n",
+    "\n",
+    "result_path=\"E:\\\\res\"\n",
+    "name_list=[\n",
+    "    \"Akane_YAMAGUCHI_AN_Se_Young_BWF_World_Championships_2022_Semi_finals\",\n",
+    "    \"Akane_YAMAGUCHI_AN_Se_Young_DAIHATSU_YONEX_Japan_Open_2022_Finals\",\n",
+    "    \"Akane_YAMAGUCHI_CHEN_Yu_Fei_BWF_World_Championships_2022_Finals\",\n",
+    "    \"Akane_YAMAGUCHI_CHEN_Yu_Fei_England_Open_2022_Semi_finals\",\n",
+    "    \"An_Se_Young_Chen_Yu_Fei_PERODUA_Malaysia_Masters_2022_Finals\",\n",
+    "    \"AN_Se_Young_Gregoria_Mariska_TUNJUNG_Malaysia_Masters_2022_SemiFinals\",\n",
+    "    \"AN_Se_Young_Pornpawee_CHOCHUWONG_Korea_Open_Badminton_Championships_2022_Finals\",\n",
+    "    \"AN_Seyoung_PUSARLA_V\",\n",
+    "    \"Anders_Antonsen_Viktor_Axelsen_HSBC_BWF_WORLD_TOUR_FINALS_2020_Finals\",\n",
+    "    \"Anthony_Sinisuka_Ginting_Rasmus_Gemke_YONEX_Thailand_Open_2021_QuarterFinals\",\n",
+    "]\n",
+    "print(result_path)\n",
+    "for video_name in name_list:\n",
+    "    print(\"-\" * 10 + \"Starting Ball Detection\" + \"-\" * 10)       \n",
+    "    json_path=os.path.join(f\"{result_path}/players/player_kp\",f\"{video_name}.json\")\n",
+    "    print(json_path)\n",
+    "    # break\n",
+    "\n",
+    "    info_dict=read_json(json_path)\n",
+    "    player_dict={}\n",
+    "    # 遍历 JSON 对象中的每个键值对\n",
+    "    for key, value in info_dict.items():\n",
+    "        if value['top'] is None or value['bottom'] is None:\n",
+    "            continue\n",
+    "        player_dict[key]={\n",
+    "            'top':value['bottom'],\n",
+    "            'bottom':value['top']\n",
+    "        }\n",
+    "        print(key)\n",
+    "\n",
+    "        write_json(player_dict, video_name,f\"E:/ans/players/player_kp\")\n",
+    "\n",
+    "    print(\"-\" * 10 + \"End Badminton Detection\" + \"-\" * 10)\n"
+   ]
   }
  ],
  "metadata": {
